PROJECT(Application)
INCLUDE(CollectSrcs)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})

SET(Application_SUBDIRS )

GET_SRCS(Application_SRCLISTS Application_SUBDIRS)
ADD_LIBRARY(Application ${Application_SRCLISTS})

LINK_LIBRARIES(${CMAKE_BINARY_DIR}/Common)
LINK_LIBRARIES(${CMAKE_BINARY_DIR}/Math)
LINK_LIBRARIES(${CMAKE_BINARY_DIR}/Graphic)

TARGET_LINK_LIBRARIES(Application GL)
TARGET_LINK_LIBRARIES(Application glut)
TARGET_LINK_LIBRARIES(Application boost_date_time)
TARGET_LINK_LIBRARIES(Application Common)
TARGET_LINK_LIBRARIES(Application Math)
TARGET_LINK_LIBRARIES(Application Graphic)
TARGET_LINK_LIBRARIES(Application boost_thread)


#install configure
INSTALL(TARGETS Application 
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/Include/Application/
    DESTINATION include/Application
    FILES_MATCHING PATTERN "*.h")

