PROJECT(Common)
INCLUDE(CollectSrcs)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})

SET(Common_SUBDIRS )

GET_SRCS(Common_SRCLISTS Common_SUBDIRS)
ADD_LIBRARY(Common ${Common_SRCLISTS})

#install configure
INSTALL(TARGETS Common
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/Include/Common 
    DESTINATION include/Common
    FILES_MATCHING PATTERN "*.h")

