PROJECT(Graphic)
INCLUDE(CollectSrcs)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})

SET(Graphic_SUBDIRS )

GET_SRCS(Graphic_SRCLISTS Graphic_SUBDIRS)
ADD_LIBRARY(Graphic ${Graphic_SRCLISTS})

LINK_LIBRARIES(${CMAKE_BINARY_DIR}/Common)
LINK_LIBRARIES(${CMAKE_BINARY_DIR}/Math)
LINK_LIBRARIES(${CMAKE_BINARY_DIR}/Graphic)

TARGET_LINK_LIBRARIES(Graphic glut)
TARGET_LINK_LIBRARIES(Graphic Common)
TARGET_LINK_LIBRARIES(Graphic Math)
TARGET_LINK_LIBRARIES(Graphic Graphic)


#install configure
INSTALL(TARGETS Graphic 
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/Include/Graphic/
    DESTINATION include/Graphic
    FILES_MATCHING PATTERN "*.h")

