PROJECT(CommonTest)
INCLUDE(CollectSrcs)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CommonTest_SUBDIRS )

GET_SRCS(CommonTest_SRCLISTS CommonTest_SUBDIRS)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Common)
LINK_DIRECTORIES($ENV{BOOST_LIB})

ADD_EXECUTABLE(CommonTest ${CommonTest_SRCLISTS})

TARGET_LINK_LIBRARIES(CommonTest boost_system)
TARGET_LINK_LIBRARIES(CommonTest boost_thread)
TARGET_LINK_LIBRARIES(CommonTest boost_date_time)
TARGET_LINK_LIBRARIES(CommonTest boost_unit_test_framework)

TARGET_LINK_LIBRARIES(CommonTest pthread)
TARGET_LINK_LIBRARIES(CommonTest Common)

#install configure
INSTALL(TARGETS CommonTest
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)


