PROJECT(CubeTest)
INCLUDE(CollectSrcs)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CubeTest_SUBDIRS )

GET_SRCS(CubeTest_SRCLISTS CubeTest_SUBDIRS)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Common)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Math)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Graphic)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Application)
LINK_DIRECTORIES($ENV{BOOST_LIB})

#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Common)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Math)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Graphic)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Application)

ADD_EXECUTABLE(CubeTest ${CubeTest_SRCLISTS})

TARGET_LINK_LIBRARIES(CubeTest boost_system)
TARGET_LINK_LIBRARIES(CubeTest boost_thread)
TARGET_LINK_LIBRARIES(CubeTest boost_date_time)
TARGET_LINK_LIBRARIES(CubeTest pthread)
TARGET_LINK_LIBRARIES(CubeTest Common)
TARGET_LINK_LIBRARIES(CubeTest Math)
TARGET_LINK_LIBRARIES(CubeTest Graphic)
TARGET_LINK_LIBRARIES(CubeTest Application)

#install configure
INSTALL(TARGETS CubeTest
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)


