PROJECT(MathTest)
INCLUDE(CollectSrcs)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(MathTest_SUBDIRS )

GET_SRCS(MathTest_SRCLISTS MathTest_SUBDIRS)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Common)
LINK_DIRECTORIES($ENV{BOOST_LIB})

ADD_EXECUTABLE(MathTest ${MathTest_SRCLISTS})

TARGET_LINK_LIBRARIES(MathTest boost_system)
TARGET_LINK_LIBRARIES(MathTest boost_thread)
TARGET_LINK_LIBRARIES(MathTest boost_date_time)
TARGET_LINK_LIBRARIES(MathTest boost_unit_test_framework)

TARGET_LINK_LIBRARIES(MathTest pthread)
TARGET_LINK_LIBRARIES(MathTest Common)
TARGET_LINK_LIBRARIES(MathTest Math)


#install configure
INSTALL(TARGETS MathTest
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)


