PROJECT(FillTriangleTest)
INCLUDE(CollectSrcs)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(FillTriangleTest_SUBDIRS )

GET_SRCS(FillTriangleTest_SRCLISTS FillTriangleTest_SUBDIRS)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Common)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Math)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Graphic)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Application)
LINK_DIRECTORIES($ENV{BOOST_LIB})

#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Common)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Math)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Graphic)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Application)

ADD_EXECUTABLE(FillTriangleTest ${FillTriangleTest_SRCLISTS})

TARGET_LINK_LIBRARIES(FillTriangleTest boost_system)
TARGET_LINK_LIBRARIES(FillTriangleTest boost_thread)
TARGET_LINK_LIBRARIES(FillTriangleTest boost_date_time)
TARGET_LINK_LIBRARIES(FillTriangleTest pthread)
TARGET_LINK_LIBRARIES(FillTriangleTest Common)
TARGET_LINK_LIBRARIES(FillTriangleTest Math)
TARGET_LINK_LIBRARIES(FillTriangleTest Graphic)
TARGET_LINK_LIBRARIES(FillTriangleTest Application)

#install configure
INSTALL(TARGETS FillTriangleTest
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)


