PROJECT(SolidCube)
INCLUDE(CollectSrcs)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(SolidCube_SUBDIRS )

GET_SRCS(SolidCube_SRCLISTS SolidCube_SUBDIRS)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Common)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Math)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Graphic)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Application)
LINK_DIRECTORIES($ENV{BOOST_LIB})

#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Common)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Math)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Graphic)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Application)

ADD_EXECUTABLE(SolidCube ${SolidCube_SRCLISTS})

TARGET_LINK_LIBRARIES(SolidCube boost_system)
TARGET_LINK_LIBRARIES(SolidCube boost_thread)
TARGET_LINK_LIBRARIES(SolidCube boost_date_time)
TARGET_LINK_LIBRARIES(SolidCube pthread)
TARGET_LINK_LIBRARIES(SolidCube Common)
TARGET_LINK_LIBRARIES(SolidCube Math)
TARGET_LINK_LIBRARIES(SolidCube Graphic)
TARGET_LINK_LIBRARIES(SolidCube Application)
#TARGET_LINK_LIBRARIES(SolidCube profiler)

#install configure
INSTALL(TARGETS SolidCube
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)

INSTALL(FILES cube2.plg DESTINATION bin)

