PROJECT(SolidTriangle)
INCLUDE(CollectSrcs)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(SolidTriangle_SUBDIRS )

GET_SRCS(SolidTriangle_SRCLISTS SolidTriangle_SUBDIRS)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Common)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Math)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Graphic)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Application)
LINK_DIRECTORIES($ENV{BOOST_LIB})

#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Common)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Math)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Graphic)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Application)

ADD_EXECUTABLE(SolidTriangle ${SolidTriangle_SRCLISTS})

TARGET_LINK_LIBRARIES(SolidTriangle boost_system)
TARGET_LINK_LIBRARIES(SolidTriangle boost_thread)
TARGET_LINK_LIBRARIES(SolidTriangle boost_date_time)
TARGET_LINK_LIBRARIES(SolidTriangle pthread)
TARGET_LINK_LIBRARIES(SolidTriangle Common)
TARGET_LINK_LIBRARIES(SolidTriangle Math)
TARGET_LINK_LIBRARIES(SolidTriangle Graphic)
TARGET_LINK_LIBRARIES(SolidTriangle Application)
#TARGET_LINK_LIBRARIES(SolidTriangle tcmalloc)

#install configure
INSTALL(TARGETS SolidTriangle
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)
INSTALL(FILES text1.bmp DESTINATION bin)

