PROJECT(TransformTest)
INCLUDE(CollectSrcs)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(TransformTest_SUBDIRS )

GET_SRCS(TransformTest_SRCLISTS TransformTest_SUBDIRS)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Common)
LINK_DIRECTORIES($ENV{BOOST_LIB})

ADD_EXECUTABLE(TransformTest ${TransformTest_SRCLISTS})

TARGET_LINK_LIBRARIES(TransformTest boost_system)
TARGET_LINK_LIBRARIES(TransformTest boost_thread)
TARGET_LINK_LIBRARIES(TransformTest boost_date_time)
TARGET_LINK_LIBRARIES(TransformTest boost_unit_test_framework)

TARGET_LINK_LIBRARIES(TransformTest pthread)
TARGET_LINK_LIBRARIES(TransformTest Common)
TARGET_LINK_LIBRARIES(TransformTest Math)
TARGET_LINK_LIBRARIES(TransformTest Graphic)


#install configure
INSTALL(TARGETS TransformTest
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)


