PROJECT(CubeBackCull)
INCLUDE(CollectSrcs)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CubeBackCull_SUBDIRS )

GET_SRCS(CubeBackCull_SRCLISTS CubeBackCull_SUBDIRS)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Common)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Math)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Graphic)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Application)
LINK_DIRECTORIES($ENV{BOOST_LIB})

#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Common)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Math)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Graphic)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Application)

ADD_EXECUTABLE(CubeBackCull ${CubeBackCull_SRCLISTS})

TARGET_LINK_LIBRARIES(CubeBackCull boost_system)
TARGET_LINK_LIBRARIES(CubeBackCull boost_thread)
TARGET_LINK_LIBRARIES(CubeBackCull boost_date_time)
TARGET_LINK_LIBRARIES(CubeBackCull pthread)
TARGET_LINK_LIBRARIES(CubeBackCull Common)
TARGET_LINK_LIBRARIES(CubeBackCull Math)
TARGET_LINK_LIBRARIES(CubeBackCull Graphic)
TARGET_LINK_LIBRARIES(CubeBackCull Application)

#install configure
INSTALL(TARGETS CubeBackCull
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)

INSTALL(FILES cube2.plg DESTINATION bin)

