PROJECT(LineCube1)
INCLUDE(CollectSrcs)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(LineCube1_SUBDIRS )

GET_SRCS(LineCube1_SRCLISTS LineCube1_SUBDIRS)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Common)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Math)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Graphic)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Application)
LINK_DIRECTORIES($ENV{BOOST_LIB})

#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Common)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Math)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Graphic)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Application)

ADD_EXECUTABLE(LineCube1 ${LineCube1_SRCLISTS})

TARGET_LINK_LIBRARIES(LineCube1 boost_system)
TARGET_LINK_LIBRARIES(LineCube1 boost_thread)
TARGET_LINK_LIBRARIES(LineCube1 boost_date_time)
TARGET_LINK_LIBRARIES(LineCube1 pthread)
TARGET_LINK_LIBRARIES(LineCube1 Common)
TARGET_LINK_LIBRARIES(LineCube1 Math)
TARGET_LINK_LIBRARIES(LineCube1 Graphic)
TARGET_LINK_LIBRARIES(LineCube1 Application)

#install configure
INSTALL(TARGETS LineCube1
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)

INSTALL(FILES cube1.plg DESTINATION bin)


