PROJECT(WalkTank)
INCLUDE(CollectSrcs)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(WalkTank_SUBDIRS )

GET_SRCS(WalkTank_SRCLISTS WalkTank_SUBDIRS)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Common)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Math)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Graphic)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Src/Application)
LINK_DIRECTORIES($ENV{BOOST_LIB})

#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Common)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Math)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Graphic)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR}/Src/Application)

ADD_EXECUTABLE(WalkTank ${WalkTank_SRCLISTS})

TARGET_LINK_LIBRARIES(WalkTank boost_system)
TARGET_LINK_LIBRARIES(WalkTank boost_thread)
TARGET_LINK_LIBRARIES(WalkTank boost_date_time)
TARGET_LINK_LIBRARIES(WalkTank pthread)
TARGET_LINK_LIBRARIES(WalkTank Common)
TARGET_LINK_LIBRARIES(WalkTank Math)
TARGET_LINK_LIBRARIES(WalkTank Graphic)
TARGET_LINK_LIBRARIES(WalkTank Application)

#install configure
INSTALL(TARGETS WalkTank
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)

INSTALL(FILES marker1.plg tank2.plg tank3.plg tower1.plg DESTINATION bin)


